# belajar-actix

./: Cargo.toml
db/: db_belajar_actix.sql
src/: main.rs
src/config/: db_connection.rs  sql_operation.rs
src/docs/base/: cargo.toml.md  main.md
src/docs/users/: delele_all_record.md  delete_record_by_id.md  get_all_users.md  get_user_by_id.md  get_users_paginate.md  insert_record_csv.md  insert_record_dynamic.md  main.md  update_record_csv.md  update_single_record.md  user_struct.md
src/pages/users/: main.rs  user_struct.rs
src/pages/users/crud/: delete_record.rs  get_record.rs  insert_record.rs  update_record.rs
