[package]
name = "belajar-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.7.0"
html-escape = "0.2.13"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["default"] }
csv = "1.3.0"
actix-multipart = "0.6.2"
log = "0.4.21"
env_logger = "0.11.3"
bcrypt = "0.15.1"
http = "0.2.12"
